[BE-Catalog] Add : 가수 조회 API `/catalog/singer/{singer_id}`에서 wallet도 추가로 반환하도록 DTO 수정 (#93)